--- a/config.json
+++ b/config.json
@@ -5,6 +5,7 @@
       "scriptFile": "misskon.js",
       "baseUrl": "https://misskon.com",
       "tags": {
+        "home": "https://misskon.com/",
         "xiuren": "https://misskon.com/tag/xiuren/",
         "feilin": "https://misskon.com/tag/feilin/",
         "mfstar": "https://misskon.com/tag/mfstar/",
@@ -34,6 +35,7 @@
       "scriptFile": "luscious.js",
       "baseUrl": "https://www.luscious.net/",
       "tags": {
+        "home": "https://www.luscious.net/hentai/",
         "softcore-ecchi": "https://www.luscious.net/hentai/softcore-ecchi-9/",
         "school-college": "https://www.luscious.net/hentai/school-college-35/"
       }
