--- a/config.json
+++ b/config.json
@@ -64,9 +64,7 @@
       "baseUrl": "https://cosplaytele.com/",
       "tags": {
         "genshin-impact": "https://cosplaytele.com/category/genshin-impact/",
-        "24hours": "https://cosplaytele.com/24-hours/",
-        "7day": "https://cosplaytele.com/7-day/",
-        "3day": "https://cosplaytele.com/3-day/"
+        "home": "https://cosplaytele.com/"
       }
     }
   }
